add: basic styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-    <head> floralfish </head>
+    <head> 
+        <title> floralfish </title>
+        <stylesheet href="styles.css" />
+    </head>
     <body>
-        here is some text!
+        floralfish
     </body>
 </html>
