--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head> 
         <title> floralfish </title>
-        <stylesheet href="styles.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         floralfish
