add: info and album

--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
 <html>
     <head> 
-        <title> floralfish </title>
+        <title>floralfish</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        floralfish
+        <div class="navbar">
+            <div class="navbar-content">
+                <a href="index.html">home</a>
+                <a href="album.html">album</a>
+            </div>
+        </div>
+        <div class="main">
+            <h1>floralfish</h1>
+            <div class="minor">this page is under construction </div>
+            <br/>
+            <div>
+                hello! I'm a historian-in-training, programmer, designer, and general doer of eccentric things. <br/>
+                i'm interested in political thought, maritime history, and software as art.<br/>
+                free palestine 🇵🇸<br/>
+
+                <a href="https://github.com/floralfish">
+                    <div class="highlight button">
+                        find me on github here
+                    </div>
+                </a>
+            </div>
+
+            <div>
+                <h3> here are some books i read this year not for work: </h3>
+                <ol>
+                    <li>out of place - edward said</li>
+                    <li>intersectional byzantium - roland betancourt</li>
+                    <li>paris spleen - charles baudelaire</li>
+                    <li>while we were dreaming - clemens meyer</li>
+                    <li>the emigrants - w. g. sebald</li>
+                    <li>the need for roots - simone weil</li>
+                </ol>
+            </div>
+        </div>
+        <br/><br/><br/><br/><br/><br/><br/><br/>  
     </body>
 </html>
